4.5 -> 5.0:
    - jbj: eliminate (*hdrchk) vector everywhere, use headerCheck() instead.
    - jbj: add metadata header stubs to pkgio.c.
    - jbj: move rpmtsFindPubkey() and rpmtsOp() to rpmdb for forward linkage.
    - jbj: add _RPMTS_PRINT to keep rpmrollback.c happy.
    - jbj: rearrange package.c internals to new locations.
    - jbj: start eliminating rpmtsSetSig by inlining.
    - jbj: eliminate rpmtsSigFoo() getters.
    - jbj: finish refactoring vsflags out of rpmts.
    - rpm.org: rename fileTypes_e and whatis() (for name spacing).
    - jbj: move (largely unused) fileTypes into rpmfi.h.
    - jbj: remove whatis() from rpmlib, use S_ISFOO() instead.
    - jbj: ensure that PLD setup & FHS packages install correctly.
    - jbj: wrapper for open(2).
    - rpm.org: ensure that yum's broken transaction checks "work" (#259961).
    - jbj: handle more white space in paths.
    - jbj: make the rpm hacker's entrance exam buggery harder (#281391).
    - jbj: don't punish monkeys who insist on "My Widdle .spec" naming.
    - jbj: permit -ta spec file extraction from zip/lzo/lzma compressed balls.
    - jbj: add %{?__tar_wildcards} to pass Fedora automated regression tests.
    - jbj: use %{__tar} with -ta builds to assist morons who cannot set PATH.
    - jbj: add %{mkstemp: ... } macro primitive.
    - rse: fix po/POTFILES.in and tools/Makefile.am to reflect recent changes (fixes "make dist", too)
    - rpm.org: cleanup main() definitions in tests and tools
    - rse: include <netinet/in.h> and/or <arpa/inet.h> for htonl(3)
    - jbj: uncouple signature verification from transaction sets.
    - jbj: add (*findPubkey) (_ts, _dig) callback in pgpDig.
    - jbj: fix: headerUnload() size implies HEADER_MAGIC_NO, no hackery needed.
    - jbj: sum per-dig digest/signature stats into ts stats in rpmtsCleanDig.
    - jbj: initialize pgpVSFlags with pgpNewDig(vsflags).
    - jbj: add pgpVSFlags for pgpDig control disablers. ugh.